@@ -503,7 +503,7 @@ if (defined $info->field('installer-menu-item')) {
 my $metapackage = 0;
 if ($type eq 'binary') {
 	$metapackage = 1;
-	for my $file (keys %{$info->index}) {
+	for my $file (@{$info->sorted_index}) {
 		next if $info->index->{$file}->{type} =~ /^d/;
 		next if $file =~ m%^usr/share/doc/%;
 		next if $file =~ m%^usr/share/lintian/overrides/%;
