@@ -40,7 +40,7 @@ my %missing_section;
 my $has_info_file;
 
 # Read package contents...
-foreach my $file (sort keys %{$info->index}) {
+foreach my $file (@{$info->sorted_index}) {
     my $index_info = $info->index->{$file};
     my $file_info = $info->file_info->{$file};
     my $link = $index_info->{link} || '';
